--- a/Assignment #12xx.ipynb
+++ b/Assignment #12xx.ipynb
@@ -5,15 +5,13 @@
    "metadata": {},
    "source": [
     "# Exercise Twelve: Texts, Three Ways\n",
-    "For this week, you will sample the three methods we've explored (topic modeling, sentiment analysis, and Markov chain generation) using the same set of root texts.\n",
+    "This week was unique as bringing in components (three methods) that were explored previously (topic modeling, sentiment analysis, and Markov chain generation) allowed for the comfort to expand with the enablement of \"the same set of root texts.\"\n",
     "\n",
     "- Collect and import ten documents (novels work best, but anything goes!)\n",
     "- Using the topic modeling code as a starter, build a topic model of the documents\n",
     "- Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
     "- Using the Markov chain code as a starter, generate a sentence using one of the documents\n",
-    "- Using the Markov chain code as a starter, generate a longer text fragment using all of the documents\n",
-    "\n",
-    "As a bonus, try to extend this analysis to note other features of these documents using any of our previous exercises as a starting point.\n"
+    "- Using the Markov chain code as a starter, generate a longer text fragment using all of the documents."
    ]
   },
   {
@@ -56,6 +54,13 @@
    "metadata": {},
    "source": [
     "## Stage One: Collect and import ten documents (novels work best, but anything goes!)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To keep the direction within my perspectives that I have explored during this semester on and off, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment business. "
    ]
   },
   {
@@ -108,7 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Two: Using the topic modeling code as a starter, build a topic model of the documents\n"
+    "## Stage Two: Using the topic modeling code as a starter, build a topic model of the documents\n",
+    "\n",
+    "The directors pulled in were now used as a resource toward a viable topic model presentation.  Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished..\n"
    ]
   },
   {
@@ -142,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"The following block  of code employs scikit-learn’s CountVectorizer to construct a document-term  matrix for the 34,677 opinions in the corpus. To make the computation process  and the subsequent analysis of the fitted model easier, we will ignore case by  lowercasing all words and exclude from our vocabulary (rare) words occurring  in fewer than 100 texts (about 0.3% of documents). We will also exclude very  common words (i.e., “stop words”) using an English stop words list packaged  with scikit-learn. Although removing low-frequency words and stop words is  neither necessary nor recommended (Schofield, Magnusson, and Mimno 2017),  we remove the words, in this pedagogical setting, to reduce the considerable  time required to fit the topic model.  import sklearn.feature_extraction.text as text  #min_df: ignore words occurring in fewer (Karsdorp, Kestemont, Riddell 297). "
+    "Importing sklearn (scikit) learn's CountVectorizer, helps to enhance and organize a document-term matrix. This enables filtering with the removal of \"words, in this pedagogical setting to reduce the considerable time required to fit the topic model\" (Karsdorp, Kestemont, Riddell 297). "
    ]
   },
   {
@@ -181,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"As with the mixture model, there are several strategies for estimating the parameters of a mixed-membership model. Here, we will use the implementation  packaged by scikit-learn which is available in the class, LatentDirichletAllocation. This implementation uses an approximation strategy known as  variational inference to estimate the model’s parameters.15 As was the case with  the mixture model, the parameters which are estimated are those associated  with the latent distributions, φ1:K, which we will refer to as the “topic-word  distributions” and the mixing weights for each document, θ1:D, which we will  refer to as the “document-topic distributions.”  import sklearn.decomposition as decomposition  model = decomposition.LatentDirichletAllocation(  n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300)."
+    "In association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition  model = decomposition.LatentDirichletAllocation(  n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300)."
    ]
   },
   {
@@ -205,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Since every parameter is associated with a topic and either a vocabulary  element or a document, it will be convenient to make this association explicit  by converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). "
+    "In this section, there was a use to take advantage of a parameter's  topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). "
    ]
   },
   {
@@ -284,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"At this point, we can refer to the document-specific set of K mixing weights  using the same index we used to examine the text of the opinions. In a related  fashion, we can refer to the parameters of the latent probability distributions  over the vocabulary by the topic name. The following block shows how we  can extract the mixing weights associated with Justice Murphy’s dissent. For  the sake of brevity, we will extract the first ten weights.  document_topic_distributions.loc['323 US 214'].loc['murphy'].head(10)\" (Karsdorp, Kestemont, Riddell 301). "
+    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\"['Topic's'] (Karsdorp, Kestemont, Riddell 301). "
    ]
   },
   {
@@ -496,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"population. Our mixed-membership  model gives us measurements of the mixing weights—technically speaking,  point-estimates of parameters—interpretable as the estimated proportions of  words associated with latent distributions in a single opinion. Taken by itself,  these proportions do not capture information about the length of an opinion.  And we might reasonably expect to distinguish between a 14,000-word opinion  in which 50% of the words are associated with a topic and an opinion which  is 500 words and has the same proportion associated with the topic.  Our recommended solution here is to take account of document length by  plotting, for each year, the proportion of all words in all opinions associated  with a given topic. We can, in effect, calculate the total number of words in  all opinions published in a given year associated with a topic by multiplying  opinion lengths by the estimated topic shares. Finally, to make years with different numbers of opinions comparable, we can divide this number by the total  number of words in opinions from that year\" (Karsdorp, Kestemont, Riddell 315). "
+    "\"Our recommended solution here is to take account of document length by plotting, for each year, the proportion of all words in all opinions associated  with a given topic. We can, in effect, calculate the total number of words in  all opinions published in a given year associated with a topic by multiplying  opinion lengths by the estimated topic shares. Finally, to make years with different numbers of opinions comparable, we can divide this number by the total  number of words in opinions from that year\" (Karsdorp, Kestemont, Riddell 315). "
    ]
   },
   {
