--- a/Assignment #12xx.ipynb
+++ b/Assignment #12xx.ipynb
@@ -22,21 +22,27 @@
     "\n",
     "“Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \n",
     "\n",
+    "MATRIX \n",
+    "\n",
     "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). \n",
     "\n",
     "“The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). \n",
     "\n",
     "“Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86).\n",
     "\n",
+    "NOTES\n",
+    "\n",
     "“ Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). \n",
     "\n",
-    "\"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172).\n",
-    "\n",
-    "\"The most basic interface is the Command Line Interface. Almost all desk\u0002top computers have a “terminal” utility that allows you to work in this \n",
+    "\"The most basic interface is the Command Line Interface. Almost all desktop computers have a “terminal” utility that allows you to work in this \n",
     "mode\" (Drucker 173).\n",
     "\n",
     "\"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates\n",
     "between an individual the computational activity\" (Drucker 176).\n",
+    "\n",
+    "INTERFACE\n",
+    "\n",
+    "\"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172).\n",
     "\n",
     "\"The notion of “cognitive load” (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
     "\n",
