--- a/Assignment #12xxx.ipynb
+++ b/Assignment #12xxx.ipynb
@@ -11,48 +11,10 @@
     "- Using the topic modeling code as a starter, build a topic model of the documents\n",
     "- Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
     "- Using the Markov chain code as a starter, generate a sentence using one of the documents\n",
-    "- Using the Markov chain code as a starter, generate a longer text fragment using all of the documents."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "“GLITCH a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity” (Benjamin 77).\n",
-    "\n",
-    "“Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \n",
-    "\n",
-    "MATRIX \n",
-    "\n",
-    "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). \n",
-    "\n",
-    "“The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). \n",
-    "\n",
-    "“Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86).\n",
-    "\n",
-    "NOTES\n",
-    "\n",
-    "“ Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). \n",
+    "- Using the Markov chain code as a starter, generate a longer text fragment using all of the documents.\n",
     "\n",
     "\"The most basic interface is the Command Line Interface. Almost all desktop computers have a “terminal” utility that allows you to work in this \n",
-    "mode\" (Drucker 173).\n",
-    "\n",
-    "\"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates\n",
-    "between an individual the computational activity\" (Drucker 176).\n",
-    "\n",
-    "INTERFACE\n",
-    "\n",
-    "\"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172).\n",
-    "\n",
-    "\"The notion of “cognitive load” (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
-    "\n",
-    "\"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media). Interfaces are often built on metaphors of windows or desktops, but they also contain assumptions about users\" (Drucker 181).\n",
-    "\n",
-    "\"An interface constructs a narrative\" (Drucker 183).\n",
-    "\n",
-    "\"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188).\n",
-    "\n",
-    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190)."
+    "mode\" (Drucker 173). \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
    ]
   },
   {
@@ -66,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To keep the direction within my perspectives that I have explored during this semester on and off, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment business. "
+    "To keep the direction within my perspectives that I have explored during this semester on and off, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. The API explored Wikipedia, was new and it was warranted to explore and use toward a practice of something off the grid with use of a Python app use for the small query. With use of the path being \"director/\" I was off an running. \"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172)."
    ]
   },
   {
@@ -78,6 +40,13 @@
     "import wikipedia\n",
     "import os\n",
     "path = \"directors/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the film industry random gathering of directors that were listed on the Wikipedia correctly to be able to locate.  The interesting component was that Sean Baker included the (filmmaker) tag on it, but still came through on the choices.  The only choice that was not able to come onboard and be documented in Wikipedia correctly was \"Sidney Poitier\". “GLITCH a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity” (Benjamin 77). As a result, he had to be replaced with another choice to move forward.  Some, of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward the process of brining in the list of names and becomeing a defined .txt entity witin the process and file which saved the page content within the directors folder and become a viable entity to explore. \"The notion of “cognitive load” (how much mental work is required) is a consideration for all interface design\" (Drucker 178)."
    ]
   },
   {
@@ -121,12 +90,12 @@
    "source": [
     "## Stage Two: Using the topic modeling code as a starter, build a topic model of the documents\n",
     "\n",
-    "The directors pulled in were now used as a resource toward a viable topic model presentation.  Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished..\n"
+    "The directors pulled in were now used as a resource toward a viable topic model presentation.  Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished. Whch was stored and represented in the path \"directors/\" which encased file names etc. “Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media). Interfaces are often built on metaphors of windows or desktops, but they also contain assumptions about users\" (Drucker 181).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "17\n",
-      "['directors/Adam_Curtis.txt', 'directors/Angelina_Jolie.txt', 'directors/Annalee_Newitz.txt', 'directors/Charlie_Jane_Anders.txt', 'directors/Daniel_Myrick.txt', 'directors/George_Lucas.txt', 'directors/Jodie_Foster.txt', 'directors/M._Night_Shyamalan.txt', 'directors/Martin_Scorsese.txt', 'directors/Mia_Hansen-Love.txt']\n"
+      "['directors/Adam_Curtis.txt', 'directors/Angelina_Jolie.txt', 'directors/Annalee_Newitz.txt', 'directors/Charlie_Jane_Anders.txt', 'directors/Daniel_Myrick.txt', 'directors/George_Lucas.txt', 'directors/Jodie_Foster.txt', 'directors/M._Night_Shyamalan.txt', 'directors/Martin_Scorsese.txt', 'directors/Mia_Hansen-Love.txt', 'directors/N.K._Jemisin.txt', 'directors/Octavia_Butler.txt']\n"
      ]
     }
    ],
@@ -148,7 +117,7 @@
     "\n",
     "filenames=sorted([os.path.join(path, fn) for fn in os.listdir(path)])\n",
     "print(len(filenames)) # count files in corpus\n",
-    "print(filenames[:10]) # print names of 1st ten files in corpus"
+    "print(filenames[:12]) # print names of 1st 12 files in corpus"
    ]
   },
   {
@@ -160,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +139,20 @@
     "dtm=vectorizer.fit_transform(filenames).toarray() # defines document term matrix\n",
     "\n",
     "vocab=np.array(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "17 articles and 17 documents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). "
    ]
   },
   {
@@ -194,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition  model = decomposition.LatentDirichletAllocation(  n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300)."
+    "In association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition  model = decomposition.LatentDirichletAllocation(  n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300).  Here 100 topics to create patterns "
    ]
   },
   {
@@ -218,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, there was a use to take advantage of a parameter's  topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). "
+    "In this section, there was a use to take advantage of a parameter's  topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). Data frames"
    ]
   },
   {
@@ -297,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\"['Topic's'] (Karsdorp, Kestemont, Riddell 301). "
+    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\"['Topic's'] (Karsdorp, Kestemont, Riddell 301). Fame and fortune represented with wiki research componenets “The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). “Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86)."
    ]
   },
   {
@@ -336,6 +319,13 @@
    ],
    "source": [
     "topic_word_distributions.loc['Topic 9'].sort_values(ascending=False).head(18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Word cloud -generates some frequencies and sees the visually impactful in the visionary displays -“Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). "
    ]
   },
   {
@@ -579,7 +569,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Three: Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n"
+    "## Stage Three: Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
+    "\n",
+    "level of fandom in wikipedia - and what goes on the page -anaylyser is neutral on wikipedia writers who chose about peole they choose to write about. \n",
+    "\"An interface constructs a narrative\" (Drucker 183)."
    ]
   },
   {
@@ -607,6 +600,13 @@
     "\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "sid = SentimentIntensityAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compound polirity of each article - differences or similarieties of negative or positive sentence components.  filenames we explore and work locally with folders created.  encoding not concerned about errors and send them to documents print them after filenames etc. checking out differences etc. big to small"
    ]
   },
   {
@@ -672,6 +672,7 @@
    "metadata": {},
    "source": [
     "## Stage Four: Using the Markov chain code as a starter, generate a sentence using one of the documents\n",
+    "documents are in an array, not continueous so we process it generator text \n",
     "\n"
    ]
   },
@@ -687,6 +688,20 @@
     "\n",
     "for document in documents:\n",
     "    generator_text += document"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "then pout text through model they look clean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188)."
    ]
   },
   {
@@ -712,7 +727,16 @@
    "metadata": {},
    "source": [
     "## Stage Five: Using the Markov chain code as a starter, generate a longer text fragment using all of the documents\n",
+    "big momment of generating book novel set up and wht words that follow.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190)."
    ]
   },
   {
